2006-03-06  Julien MOUTTE  <julien@moutte.net>

	* ext/libpng/gstpngdec.c: (gst_pngdec_caps_create_and_set): 
	Implement paletted and grayscale png files handling.
	(#150363).

2006-03-06  Thomas Vander Stichele  <thomas at apestaart dot org>

	* ext/speex/gstspeexenc.c: (gst_speexenc_set_header_on_caps),
	(gst_speexenc_chain):
	  fix a tag list assert
	  follow gst-plugins-base/ext/ogg/README; set OFFSET
	  and OFFSET_END.  Muxes correctly with gst-plugins-base
	  > 0.9.3

2006-03-04  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/id3demux/Makefile.am:
	* gst/id3demux/gstid3demux.c: (gst_id3demux_add_srcpad),
	(gst_id3demux_chain), (gst_id3demux_sink_activate):
	  Use new typefind helper functions here as well, and
	  do typefinding in pull-mode if upstream supports that.

2006-03-04  Tim-Philipp Müller  <tim at centricular dot net>

	* sys/sunaudio/gstsunaudiomixerctrl.c:
	(gst_sunaudiomixer_ctrl_get_volume),
	(gst_sunaudiomixer_ctrl_set_volume):
	* sys/sunaudio/gstsunaudiomixertrack.c:
	(gst_sunaudiomixer_track_new):
	  Remove unused variables, breaks build from CVS
	  with -Werror (#333392, patch by: Benjamin Pineau)

2006-03-03  Wim Taymans  <wim@fluendo.com>

	* docs/plugins/Makefile.am:
	* docs/plugins/gst-plugins-good-plugins-docs.sgml:
	* docs/plugins/gst-plugins-good-plugins-sections.txt:
	Added wavparse docs.

	* gst/wavparse/gstwavparse.c: (gst_wavparse_class_init),
	(gst_wavparse_reset), (gst_wavparse_init),
	(gst_wavparse_create_sourcepad), (gst_wavparse_parse_file_header),
	(gst_wavparse_stream_init), (gst_wavparse_perform_seek),
	(gst_wavparse_stream_headers), (gst_wavparse_send_event),
	(gst_wavparse_stream_data), (gst_wavparse_loop),
	(gst_wavparse_srcpad_event), (gst_wavparse_sink_activate_pull),
	(gst_wavparse_change_state):
	* gst/wavparse/gstwavparse.h:
	Implement seek in READY (fixes #327658)
	Added docs and did some cleanups.

2006-03-03  Tim-Philipp Müller  <tim at centricular dot net>
